# FloristWeatherBot

./: README.md
fwbot/: .env.template  pyproject.toml
fwbot/fwbot/: start_up.py
fwbot/fwbot/api/: agent.py
fwbot/fwbot/api/commands/: __init__.py  start_command.py  stt_handler.py
fwbot/fwbot/core/tools/: __init__.py  datetime_tool.py  google_search.py  storage_tool.py  weather_tool.py
fwbot/fwbot/db/: __init__.py  create.py  insert.py
fwbot/fwbot/util/: __init__.py  prompt.py  utils.py
