[tool.poetry]
name = "fwbot"
version = "0.1.0"
description = ""
authors = ["Anastasiia Maiorova <anastasia.mayorova.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "djbot.start_up:start_up"
